--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,8 @@
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h4>Email:</h4>
-                <p>mqs@gmail.com</p>
+                <p>meruqualitysuppliers@</p>
+                  <p>gmail.com</p>
               </div>
             </div>
           </div><!-- End Info Item -->
